<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">zadanie_3</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="btnSecondActivityTitle">Druga aktywność</string>
    <string name="btnCloseTitle">Zakończ</string>
    <string name="titleMainActivity">Zadanie 3</string>
    <string name="btnFirstActivityTitle">Pierwsza aktywność</string>
    <string name="btnMadTitle">Otwórz mad.zut.edu.pl</string>
    <string name="btnCall">Zadzwoń pod numer 456</string>
    <string name="btnOpenCameraTitle">Otwórz aparat</string>
    <string name="btnContactsTitle">Otwórz kontakty</string>  

</resources>